fix: quiz list based on hierarchy and auto form fill for course ,module,chapter,topic creation

--- a/src/app/features/courses/components/create-module/create-module.component.html
+++ b/src/app/features/courses/components/create-module/create-module.component.html
@@ -7,7 +7,7 @@
     <input type="text" formControlName="name">
 
     <label>Course:</label>
-    <input type="text" formControlName="courseId">
+    <input type="text" [disabled]="true"  formControlName="courseId">
 
     <button type="submit" [disabled]="!moduleForm.valid">Create Module</button>
 </form>
