--- a/src/app/features/courses/components/view-quizzes/view-quizzes.component.html
+++ b/src/app/features/courses/components/view-quizzes/view-quizzes.component.html
@@ -9,7 +9,10 @@
       <p>Published: {{ quiz.isPublished ? 'Yes' : 'No' }}</p>
       <!-- Display more fields as needed -->
   
+      <button >View</button>
+      &nbsp;
       <button (click)="deleteQuiz(quiz._id)">Delete</button>
+
       <!-- Add edit button and functionality as required -->
     </li>
   </ul>
