--- a/src/app/features/courses/components/view-topics/view-topics.component.html
+++ b/src/app/features/courses/components/view-topics/view-topics.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-header">
-    <h1>Topics</h1>
+    <h1>{{selectedChapter.name}} Topics</h1>
     <button class="btn btn-primary" routerLink="../../create-topic/{{chapterID}}">Create New Topic</button>
 </div>
 <div class="quiz-cards">
