view topic with quizes list complted

--- a/src/app/features/courses/components/view-quizzes/view-quizzes.component.html
+++ b/src/app/features/courses/components/view-quizzes/view-quizzes.component.html
@@ -9,6 +9,8 @@
       <p>Published: {{ quiz.isPublished ? 'Yes' : 'No' }}</p>
       <!-- Display more fields as needed -->
   
+      <button >Edit</button>
+      &nbsp;
       <button >View</button>
       &nbsp;
       <button (click)="deleteQuiz(quiz._id)">Delete</button>
