adding loader with interceptor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <router-outlet></router-outlet>
+<div *ngIf="loading$ | async" style="height: 100vh; width: 100vw; position: fixed; left: 0; top: 0; display: flex; justify-content: center;align-items: center;" > <div class="loader" ></div>
