--- a/src/app/features/courses/components/create-quiz/create-quiz.component.html
+++ b/src/app/features/courses/components/create-quiz/create-quiz.component.html
@@ -56,6 +56,15 @@
     <label>Topic ID:</label>
     <input type="text" formControlName="topicId" required>
 
+    <div formArrayName="questions">
+        <div *ngFor="let question of questions.controls; let i =index">
+            <app-question-form formControlName="{{i}}"></app-question-form>
+            <button type="button" (click)="removeQuestion(i)">Remove Question</button>
+        </div>
+        <button type="button" (click)="addQuestion()">Add Question</button>
+    </div>
+
+
     <button type="submit">Submit</button>
 
 </form>
