quizzes selector implemented

--- a/src/app/features/courses/components/view-chapters/view-chapters.component.html
+++ b/src/app/features/courses/components/view-chapters/view-chapters.component.html
@@ -10,5 +10,10 @@
     </div>
 </div>
 
+<br>
+
+<h1>{{selectModule.name}} Quizzes</h1>
+<br>
+<app-view-quizzes [hierarchy]="'module'" [id]="moduleID"></app-view-quizzes>
 
 <app-question-form></app-question-form>
