--- a/src/app/features/courses/components/view-topic/view-topic.component.html
+++ b/src/app/features/courses/components/view-topic/view-topic.component.html
@@ -1,3 +1,5 @@
-<p>view-topic works!</p>
+<div class="dashboard-header">
+    <h1>{{selectTopic.name}} Quizzes</h1>
+</div>
 
 <app-view-quizzes [hierarchy]="'topic'" [id]="topicID"></app-view-quizzes>
