--- a/src/app/features/courses/components/view-topic/view-topic.component.html
+++ b/src/app/features/courses/components/view-topic/view-topic.component.html
@@ -2,4 +2,4 @@
     <h1>{{selectTopic.name}} Quizzes</h1>
 </div>
 
-<app-view-quizzes [hierarchy]="'topic'" [id]="topicID"></app-view-quizzes>
+<app-view-quizzes [hierarchy]="'topic'" [id]="topicId"></app-view-quizzes>
