quetion form styling and default value selection

--- a/src/app/features/courses/components/question-form/question-form.component.html
+++ b/src/app/features/courses/components/question-form/question-form.component.html
@@ -31,14 +31,12 @@ TODO
 <form [formGroup]="questionForm" (ngSubmit)="submit()">
   <div class="quetion-container">
     <div class="quetion-text">
-      <label>Question Text:</label>
-      <textarea rows="5" formControlName="questionText"></textarea>
+      <textarea rows="5" formControlName="questionText" placeholder="Quetion"></textarea>
       <div *ngIf="questionForm.get('questionText')?.invalid && questionForm.get('questionText')?.touched">
         Question text is required.
       </div>
     </div>
     <div>
-      <label>Question Type:</label>
       <select formControlName="quetionType">
         <option *ngFor="let type of questionTypes" [value]="type.value">
           {{ type.display }}
@@ -49,7 +47,6 @@ TODO
       </div>
     </div>
     <div>
-      <label>Difficulty:</label>
       <select formControlName="dificulty">
         <option *ngFor="let difficulty of difficulties" [value]="difficulty">{{ difficulty }}</option>
       </select>
@@ -62,18 +59,17 @@ TODO
 
  
 
-  <div formArrayName="options" *ngIf="questionForm.get('quetionType')?.value === 'multiple_choice' || questionForm.get('quetionType')?.value === 'multi_select'">
-    <div *ngFor="let option of options.controls; let i=index" [formGroupName]="i">
-      <label>Option {{ i + 1 }}:</label>
-      <input formControlName="optionText" />
-      <input *ngIf="questionForm.get('quetionType')?.value === 'multi_select'" type="checkbox" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" />
-      <input *ngIf="questionForm.get('quetionType')?.value === 'multiple_choice'" type="radio" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" /> Correct
-      <button type="button" (click)="removeOption(i)">Remove</button>
+  <div formArrayName="options" *ngIf="questionForm.get('quetionType')?.value === 'multipleChoice' || questionForm.get('quetionType')?.value === 'multiSelect'"  >
+    <div class="option" *ngFor="let option of options.controls; let i=index" [formGroupName]="i" [ngClass]= "options.controls[i]?.get('isCorrect')?.value  ? 'correct-answer' : '' ">
+      <input *ngIf="questionForm.get('quetionType')?.value === 'multiSelect'" type="checkbox" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
+      <input *ngIf="questionForm.get('quetionType')?.value === 'multipleChoice'" type="radio" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
+      <input formControlName="optionText" class="option-input" placeholder="option {{i+1}}" />
+      <button type="button" (click)="removeOption(i)">X</button>
     </div>
     <button type="button" (click)="addOption()">Add Option</button>
   </div>
 
-  <div formArrayName="options" *ngIf="questionForm.get('quetionType')?.value === 'true_false'">
+  <div formArrayName="options" *ngIf="questionForm.get('quetionType')?.value === 'trueFalse'">
     <div *ngFor="let option of options.controls; let i=index" [formGroupName]="i">
       <label>{{ option.value.optionText }}:</label>
       <input type="checkbox" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" /> Correct
