--- a/src/app/features/courses/components/question-form/question-form.component.css
+++ b/src/app/features/courses/components/question-form/question-form.component.css
@@ -8,7 +8,7 @@
 
 /* Form styling */
 form {
-  max-width: 600px;
+  max-width: 100%;
   margin: 50px auto;
   padding: 20px;
   border-radius: 10px;
@@ -27,7 +27,7 @@ label {
 /* Input, textarea, and select styling */
 textarea, select, input[type="text"]{
   width: calc(100% - 10px);
-  padding: 10px !important;
+  padding: 10px ;
   margin-top: 5px;
   border: 1px solid #cccccc;
   border-radius: 5px;
@@ -42,15 +42,42 @@ textarea:focus, select:focus, input[type="text"]:focus {
   outline: none;
 }
 
+.option-input{
+  width: 60%;
+  padding: 10px;
+}
+
+.correct-answer {
+  background-color: #acd8a7;
+  .option-input{
+    border: 1px solid black;
+    background-color: #acd8a7;
+  }
+  border-radius: 5px;
+}
+
+
+
+
 /* Checkbox styling */
 input[type="checkbox"],input[type="radio"]  {
-  margin-left: 10px;
-  transform: scale(1.2);
+  border-color: grey;
+  transform: scale(1.7);
+  width: 3%;
+
+}
+
+.option{
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
 }
 
 /* Button styling */
 button {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   padding: 10px 20px;
   background-color: #007bff;
   color: #ffffff;
