questions service implemented

--- a/src/app/features/courses/components/create-quiz/create-quiz.component.html
+++ b/src/app/features/courses/components/create-quiz/create-quiz.component.html
@@ -44,6 +44,9 @@
     <label>Organization Id:</label>
     <input type="text" formControlName="organizationId" required>
 
+    <label>Branch Id:</label>
+    <input type="text" formControlName="branchId" required>
+
     <label>Course Id:</label>
     <input type="text" formControlName="courseId" required>
 
