--- a/src/app/features/courses/components/question-form/question-form.component.html
+++ b/src/app/features/courses/components/question-form/question-form.component.html
@@ -60,7 +60,7 @@ TODO
  
 
   <div formArrayName="options" *ngIf="questionForm.get('quetionType')?.value === 'multipleChoice' || questionForm.get('quetionType')?.value === 'multiSelect'"  >
-    <div class="option" *ngFor="let option of options.controls; let i=index" [formGroupName]="i" [ngClass]= "options.controls[i]?.get('isCorrect')?.value  ? 'correct-answer' : '' ">
+    <div class="option" *ngFor="let option of options.controls; let i=index" [formGroupName]="i" [ngClass]= "options.controls[i].get('isCorrect')?.value  ? 'correct-answer' : '' ">
       <input *ngIf="questionForm.get('quetionType')?.value === 'multiSelect'" type="checkbox" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
       <input *ngIf="questionForm.get('quetionType')?.value === 'multipleChoice'" type="radio" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
       <input formControlName="optionText" class="option-input" placeholder="option {{i+1}}" />
