--- a/src/app/features/courses/components/view-chapters/view-chapters.component.html
+++ b/src/app/features/courses/components/view-chapters/view-chapters.component.html
@@ -14,7 +14,7 @@
 
 <div class="dashboard-header">
     <h1>{{selectModule.name}} Quizzes</h1>
-    <button class="btn btn-primary" (click)="openQuizComponent()" >Create New Quiz </button>
+    <button class="btn btn-primary" (click)="createQuiz()" >Create New Quiz </button>
 </div>
 
 <app-view-quizzes [hierarchy]="'module'" [id]="moduleId"></app-view-quizzes>
