--- a/src/app/features/courses/components/view-module/view-module.component.html
+++ b/src/app/features/courses/components/view-module/view-module.component.html
@@ -14,7 +14,7 @@
 
 <div class="dashboard-header">
     <h1>{{selectCourse.name}} Quizzes</h1>
-    <button class="btn btn-primary" (click)="openQuizComponent()" >Create New Quiz </button>
+    <button class="btn btn-primary" (click)="createQuiz()" >Create New Quiz </button>
 </div>
 
 <app-view-quizzes [hierarchy]="'course'" [id]="courseId"></app-view-quizzes>
