quiz timer implemented

--- a/src/app/features/courses/components/view-quizzes/view-quizzes.component.html
+++ b/src/app/features/courses/components/view-quizzes/view-quizzes.component.html
@@ -11,7 +11,7 @@
   
       <button >Edit</button>
       &nbsp;
-      <button >View</button>
+      <button (click)="viewQuiz(quiz)">View</button>
       &nbsp;
       <button (click)="deleteQuiz(quiz._id)">Delete</button>
 
